fixed layout bugs on mobile version

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -223,7 +223,7 @@ a:hover {text-decoration: none;}
 	background: url('../img/bg-wrap.jpg') 0 0 repeat; 
 	overflow: hidden;
 }
-#inner-wrap { /* TODO: genau definieren (vor allem bei großen Bildschirmen)! */
+#inner-wrap {
 	position: relative;
 	width: 960px;
 	margin: 0 auto;
@@ -440,6 +440,7 @@ a:hover {text-decoration: none;}
 
 /** smartphones **/
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+/*@media only screen and (min-width : 320px) and (max-width : 480px) {*/
 
 	/** text indents only for mobile devices **/
 	#header-navigation .menu-item a {
@@ -447,6 +448,9 @@ a:hover {text-decoration: none;}
 		text-indent: -19999px;
 		overflow: hidden;
 	}
+
+	/** wrap **/
+	#inner-wrap {width: 100%;}
 
 	/** map **/
 	#map-wrap {
@@ -566,10 +570,11 @@ a:hover {text-decoration: none;}
 		top: auto;
 		left: auto;
 		height: auto;
+		width: 100%;
 	}
 	#rss {
-		float: none;
 		width: 100%;
+		margin-left: 0;
 	}
 	#rss, #info {
 		background-color: #527dbb;
@@ -586,6 +591,7 @@ a:hover {text-decoration: none;}
 		padding: 10px 10px 15px 10px;
 		float: none;
 	}
+	#rss article:last-child {margin: 0 auto 5px auto;}
 	#info div {
 		background-color: #fff;
 		padding: 20px 10px 5px 10px;
@@ -615,7 +621,7 @@ a:hover {text-decoration: none;}
 	}
 	.feed-more {
 		position: absolute;
-		bottom: 15px;
+		bottom: 20px;
 		left: 10px;
 		display: block;
 		background-color: #527dbb;
